samples/_failures_safe/1761085267_a24a53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30f48c5f.c: In function ‘main’:
./samples/SAFE/__tmp_30f48c5f.c:135:13: error: expected identifier or ‘(’ at end of input
  135 |             int
      |             ^~~
./samples/SAFE/__tmp_30f48c5f.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30f48c5f.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30f48c5f.c:135:13: error: expected declaration or statement at end of input
